Runtime/Scripts/BcsvNative.cs


        // Scalar getters
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_row_get_bool(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern byte bcsv_row_get_uint8(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ushort bcsv_row_get_uint16(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern uint bcsv_row_get_uint32(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ulong bcsv_row_get_uint64(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern sbyte bcsv_row_get_int8(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern short bcsv_row_get_int16(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int bcsv_row_get_int32(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long bcsv_row_get_int64(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float bcsv_row_get_float(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern double bcsv_row_get_double(nint row, int col);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_row_get_string(nint row, int col);

        // Scalar setters
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_bool(nint row, int col, [MarshalAs(UnmanagedType.U1)] bool value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint8(nint row, int col, byte value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint16(nint row, int col, ushort value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint32(nint row, int col, uint value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint64(nint row, int col, ulong value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int8(nint row, int col, sbyte value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int16(nint row, int col, short value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int32(nint row, int col, int value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int64(nint row, int col, long value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_float(nint row, int col, float value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_double(nint row, int col, double value);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern void bcsv_row_set_string(nint row, int col,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

        // Array getters
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_bool_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint8_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint16_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint32_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_uint64_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int8_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int16_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int32_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_int64_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_float_array(nint row, int startCol, IntPtr dst, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_get_double_array(nint row, int startCol, IntPtr dst, nuint count);

        // Array setters
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_bool_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint8_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint16_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint32_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_uint64_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int8_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int16_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int32_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_int64_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_float_array(nint row, int startCol, IntPtr src, nuint count);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_row_set_double_array(nint row, int startCol, IntPtr src, nuint count);

        // ── CSV Reader ─────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_csv_reader_create(nint layout, byte delimiter, byte decimalSep);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_csv_reader_destroy(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_reader_open(nint reader,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
            [MarshalAs(UnmanagedType.U1)] bool hasHeader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_csv_reader_close(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_reader_is_open(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_csv_reader_layout(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_reader_next(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_csv_reader_row(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_csv_reader_index(nint reader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_csv_reader_error_msg(nint reader);

        // ── CSV Writer ─────────────────────────────────────────────────
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_csv_writer_create(nint layout, byte delimiter, byte decimalSep);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_csv_writer_destroy(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_writer_open(nint writer,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
            [MarshalAs(UnmanagedType.U1)] bool overwrite,
            [MarshalAs(UnmanagedType.U1)] bool includeHeader);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void bcsv_csv_writer_close(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_writer_is_open(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_csv_writer_layout(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_writer_next(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool bcsv_csv_writer_write(nint writer, nint row);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nint bcsv_csv_writer_row(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern nuint bcsv_csv_writer_index(nint writer);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr bcsv_csv_writer_error_msg(nint writer);
